--- a/composer.json
+++ b/composer.json
@@ -69,6 +69,7 @@
         }
     },
     "require-dev": {
-        "symfony/maker-bundle": "^1."
+        "symfony/maker-bundle": "^1.",
+        "zenstruck/foundry": "*"
     }
 }
