--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -19,7 +19,9 @@ security:
                 check_path: entrar
             logout:
                 path: salir
-
+    role_hierarchy:
+        ROLE_ADMIN: [ 'ROLE_COMPOSITOR' ]
+        ROLE_COMPOSITOR: [ 'ROLE_ARTISTA' ]
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
 
